apps/blinko/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blinko
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blinko
  template:
    metadata:
      labels:
        app: blinko
    spec:
      containers:
        - name: blinko
          image: blinkospace/blinko:1.8.7
          ports:
            - containerPort: 1111
              name: http
          volumeMounts:
            - name: blinko-storage
              mountPath: /var/.blinko
          resources:
            requests:
              memory: "1Gi"
              cpu: "100m"
            limits:
              memory: "2Gi"
              cpu: "500m"
      volumes:
        - name: blinko-storage
          persistentVolumeClaim:
            claimName: blinko-storage
