apps/blinko/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blinko
spec:
  type: ClusterIP
  selector:
    app: blinko
  ports:
    - name: http
      port: 80
      targetPort: http
