apps/blinko/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: blinko-route
spec:
  entryPoints:
    - websecure
  tls:
    secretName: blinko-tls
  routes:
    - match: Host(`blinko.matiix310.dev`)
      kind: Rule
      services:
        - name: blinko
          port: 1111
